@startuml
!define Table(name,desc) class name as "desc" << (T,#FFAAAA) >>
!define primary_key(x) <u>x</u>
hide methods
hide stereotypes

' -------------------- Справочники --------------------
Table(Role, "Роль пользователя") {
 primary_key(id): UUID
 name: String
}

Table(PersonType, "Тип лица") {
 primary_key(id): UUID
 name: String
}

Table(TransactionType, "Тип транзакции") {
 primary_key(id): UUID
 name: String
}

Table(Status, "Статус транзакции") {
 primary_key(id): UUID
 name: String
 is_editable: Boolean
 is_deletable: Boolean
}

Table(Category, "Категория") {
 primary_key(id): UUID
 name: String
 description: String
}

Table(Bank, "Банк") {
 primary_key(id): UUID
 name: String
 bic: String
}

' -------------------- Основные сущности --------------------
Table(User, "Пользователь") {
 primary_key(id): UUID
 email: String
 password_hash: String
 name: String
 role_id: UUID
 person_type_id: UUID
 inn: String
 phone: String
}

Table(Account, "Банковский счёт") {
 primary_key(id): UUID
 bank_id: UUID
 account_number: String
 owner_user_id: UUID
 owner_recipient_id: UUID
}

Table(Recipient, "Контрагент") {
 primary_key(id): UUID
 inn: String
 phone: String
 account_id: UUID
 category_id: UUID
}

Table(Transaction, "Транзакция") {
 primary_key(id): UUID
 created_by_user_id: UUID ' кто внёс запись
 actor_user_id: UUID    ' от чьего имени совершается
 account_from_id: UUID   ' счёт списания
 account_to_id: UUID    ' счёт зачисления
 transaction_type_id: UUID
 category_id: UUID
 status_id: UUID
 amount: BigDecimal
 timestamp: DateTime
 comment: String
}

' -------------------- Связи --------------------
User }o--|| Role : "роль"
User }o--|| PersonType : "тип лица"
User ||--o{ Account : "владеет счётом"

Recipient ||--o{ Account : "владеет счётом"
Recipient }o--|| Category : "категория"

Account }o--|| Bank : "банк"

Transaction }o--|| Account : "со счёта"
Transaction }o--|| Account : "на счёт"
Transaction }o--|| TransactionType : "тип"
Transaction }o--|| Category : "категория"
Transaction }o--|| Status : "статус"
Transaction }o--|| User : "создал"       ' created_by_user_id
Transaction }o--|| User : "actor"        ' actor_user_id

@enduml